--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,79 @@
 /*-----------------------*/
+/*  Post Formats
+/*-----------------------*/
+.swiper-post{
+  height: 350px;
+}
+.post-meta, .meta, .r-meta, .post-cats {
+  font-family: Roboto;
+  text-transform: uppercase;
+  line-height: 20px;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 11px;
+}
+
+
+.title {
+  font-family: Playfair Display;
+  text-transform: uppercase;
+  line-height: 48px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 48px;
+}
+
+.entry-title a {
+  color: #000000;
+}
+
+
+
+.format-gallery a:hover, .format-gallery .post-meta .fa {
+  color: #99cc00;
+}
+.post-author, .post-meta, .post-meta a, .r-meta, .r-meta a, .comment-meta a, #commentform p label, .single .pagination a {
+  color: #aaaaaa;
+}
+
+
+.post-content {
+  font-family: Playfair Display;
+  line-height: 24px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+}
+.post-box, .breadcrumbs, .author-box, .relatedPosts, #comments, .comment-reply-link, #respond, .pagination, .norm-pagination {
+  color: #777777;
+}
+.format-gallery .post-type i, .format-gallery .post-cats a:before, .format-gallery .more-link, .format-gallery .post-cats a:hover, .format-gallery .read-more a {
+  background: #99cc00;
+}
+
+a, a:hover, .title a:hover, .sidebar a:hover, .sidebar-small-widget a:hover, .breadcrumbs a:hover, .meta a:hover, .post-meta a:hover, .post .post-content ul li:before, .content-page .post-content ul li:before, .reply:hover i, .reply:hover a, .edit-post a, .relatedPosts .widgettitle a:hover, .error-text {
+  color: #99cc00;
+}
+.post-content .more-link:hover{
+  background: #262626;
+  color: #fff;
+}
+.entry-title, .entry-title a, .social-btn a, .section-heading, .author-box h5, .title a, .post-navigation a {
+  color: #000000;
+}
+.content-home {
+  float: left;
+  margin: 0;
+  width: 100%;
+}
+.widget-title span, #tabs li.active span, .post-content blockquote, .tagcloud a:hover .post blockquote, .pagination .current, .pagination a:hover, .comment-reply-link:hover, .footer-links {
+  border-color: #99cc00 !important;
+}
+.header-search:hover .search-button, .search-button, .nav-menu ul li ul li a:hover, .read-more a, .post-type i, .post-cats a:before, .widget_archive a:hover .cat-count, .cat-item a:hover .cat-count, .tagcloud a:hover, .pagination .current, .pagination a:hover, .post-format-quote, .flex-direction-nav a:hover, .flex-control-nav a.flex-active, .subscribe-widget input[type='submit'], #wp-calendar caption, #wp-calendar td#today, #commentform #submit, .wpcf7-submit, .off-canvas-search, .author-location span, .jetpack_subscription_widget input[type=submit] {
+  background-color: #99cc00;
+}
+
+/*-----------------------*/
 /*	sidebar
 /*-----------------------*/
 .widget-title, #tabs li {
